<resources>
    <string name="app_name">Student Success Tracker</string>
    <string name="add_courses">Add Courses</string>
    <string name="view_courses">View Courses</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="terms">Terms</string>
    <string name="courses">Courses</string>
    <string name="mentors">Mentors</string>
    <string name="assessments">Assessments</string>
    <string name="save">Save</string>
    <string name="share_via_email">Share via Email</string>
    <string name="back_to_course">Back to Course</string>
    <string name="home">Home</string>
    <string name="planned">Planned</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="course_name">Course Name</string>
    <string name="course_notes">Course Notes</string>
    <string name="course_status">Course Status</string>
    <string name="set_start_date_reminder">Set Start Date Reminder</string>
    <string name="e_mail">E-Mail</string>
    <string name="set_end_date_reminder">Set End Date Reminder</string>
    <string name="course_mentor">Course Mentor</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="term_number">Term Number</string>
    <string name="add_new_term">Add New Term</string>
    <string name="add_term">Add Term</string>
    <string name="add_new_mentor">Add New Mentor</string>
    <string name="email">Email</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="empty_not_saved">Empty Not Saved</string>
    <string name="please_enter_text">Please enter text in all fields</string>
    <string name="delete_mentor">Delete Mentor</string>
    <string name="update_mentor">Update Mentor</string>
    <string name="add_new_assessment">Add New Assessment</string>
    <string name="pre_assessment">Pre-Assessment</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="performance_assessment">Performance Assessment</string>
    <string name="objective_assessment">Objective Assessment</string>
    <string name="due_date">Due Date</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="start_date_term_start">Start Date: Term Start</string>
    <string name="end_date_term_end">End Date: Term End</string>
    <string name="update_assessment">Update Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="assessment_due_date">Assessment Due Date</string>
    <string name="edit">Edit</string>
    <string name="add_new_course">Add New Course</string>
    <string name="course_dates">Course Dates</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="course_assessments">Course Assessments</string>
    <string name="update_course">Update Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="assign_to_course">Assign to Course</string>
    <string name="assign_to_term">Assign to Term</string>
    <string name="update_term">Update Term</string>
    <string name="delete_term">Delete Term</string>
    <string name="set_assessment_due_date_notification">Set assessment due date notification</string>
    <string name="enter">Enter</string>
    <string name="imageview_of_wgu_owl">Imageview of WGU owl</string>
    <string name="term_start_term_end">Term Start - Term End</string>

</resources>
