<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="380dp"
            android:layout_height="800dp">

            <TextView
                android:id="@+id/course_detail_course_name"
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/course_name" />

            <TextView
                android:id="@+id/course_detail_status_label"
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_assessment_name"
                android:layout_centerHorizontal="true"
                android:text="@string/course_status" />

            <TextView
                android:id="@+id/course_detail_status"
                style="@style/Text.Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_status_label"
                android:layout_centerHorizontal="true"
                android:text="@string/course_status" />

            <TextView
                android:id="@+id/course_detail_course_dates_label"
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_status"
                android:layout_centerHorizontal="true"
                android:text="@string/course_dates" />

            <TextView
                android:id="@+id/course_detail_course_start_date"
                style="@style/Text.Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/course_detail_course_dates_label"
                android:layout_marginStart="82dp"
                android:layout_marginLeft="82dp"
                android:text="@string/start_date" />

            <TextView
                android:id="@+id/course_detail_course_end_date"
                style="@style/Text.Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_course_dates_label"
                android:layout_toEndOf="@+id/course_detail_course_start_date"
                android:layout_toRightOf="@+id/course_detail_course_start_date"
                android:text="@string/end_date" />

            <TextView
                android:id="@+id/course_detail_course_mentor_label"
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_course_end_date"
                android:layout_centerHorizontal="true"
                android:text="@string/course_mentor" />


            <Button
                android:id="@+id/course_detail_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/course_detail_home_button"
                android:layout_centerHorizontal="true"
                android:text="@string/edit" />

            <TextView
                android:id="@+id/course_detail_mentor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/mentor_name" />

            <TextView
                android:id="@+id/course_detail_mentor_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_mentor_name"
                android:layout_centerHorizontal="true"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/course_detail_mentor_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_mentor_phone_number"
                android:layout_centerHorizontal="true"
                android:text="@string/e_mail" />

            <Button
                android:id="@+id/course_detail_add_mentor_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_mentor_email"
                android:layout_centerHorizontal="true"
                android:text="@string/add_mentor" />

            <TextView
                android:id="@+id/course_detail_assessments_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Title"
                android:layout_below="@+id/course_detail_add_mentor_button"
                android:layout_centerHorizontal="true"
                android:text="@string/course_assessments" />

            <Button
                android:id="@+id/course_detail_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/home" />

            <TextView
                android:id="@+id/course_detail_course_assessment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_assessments_label"
                android:layout_centerHorizontal="true"
                android:text="@string/assessment_name" />

            <Button
                android:id="@+id/course_detail_add_assessment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/course_detail_course_assessment_name"
                android:layout_centerHorizontal="true"
                android:text="@string/add_assessment" />

            <Button
                android:id="@+id/course_detail_course_notes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/course_detail_edit_button"
                android:layout_centerHorizontal="true"
                android:text="@string/course_notes" />


        </RelativeLayout>


    </HorizontalScrollView>

</ScrollView>