<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CourseNotesActivity">

    <EditText
        android:id="@+id/course_notes_entry"
        android:layout_width="264dp"
        android:layout_height="344dp"
        android:layout_below="@+id/course_notes_title"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/course_notes_title"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/course_notes" />

    <Button
        android:id="@+id/course_notes_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_notes_entry"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />

    <Button
        android:id="@+id/course_notes_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_notes_save_button"
        android:layout_centerHorizontal="true"
        android:text="@string/share_via_email" />

    <Button
        android:id="@+id/course_notes_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/course_notes_share_button"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/back_to_course" />

    <Button
        android:id="@+id/course_notes_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/course_notes_share_button"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:text="@string/home" />
</RelativeLayout>